--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,132 +277,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Necessidades específicas - Se sim, qual?</th>\n",
-       "      <th>Necessidades específicas - Se sim, qual?</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>RN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>SP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>RJ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>SP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>AL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6505</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6506</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6507</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6508</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6509</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>Fora da America Latina / Fuera de América Latina</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6510 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Necessidades específicas - Se sim, qual?  \\\n",
-       "0                                         N/A   \n",
-       "1                                         N/A   \n",
-       "2                                         N/A   \n",
-       "3                                         N/A   \n",
-       "4                                         N/A   \n",
-       "...                                       ...   \n",
-       "6505                                      N/A   \n",
-       "6506                                      N/A   \n",
-       "6507                                      N/A   \n",
-       "6508                                      N/A   \n",
-       "6509                                      N/A   \n",
-       "\n",
-       "              Necessidades específicas - Se sim, qual?  \n",
-       "0                                                   RN  \n",
-       "1                                                   SP  \n",
-       "2                                                   RJ  \n",
-       "3                                                   SP  \n",
-       "4                                                   AL  \n",
-       "...                                                ...  \n",
-       "6505                                               N/A  \n",
-       "6506                                               N/A  \n",
-       "6507                                               N/A  \n",
-       "6508                                               N/A  \n",
-       "6509  Fora da America Latina / Fuera de América Latina  \n",
-       "\n",
-       "[6510 rows x 2 columns]"
+       "array(['Não, esse é meu primeiro evento da linguagem Python / No, es mi primer evento de la comunidad Python',\n",
+       "       'Sim, eventos locais / Sí, eventos locales',\n",
+       "       'Sim, eventos locais / Sí, eventos locales | Sim, eventos regionais (Python Nordeste, Python Cerrado, Python Sul, etc) / Sí, eventos regionales (PyCon Latam, PyCon Bolivia)',\n",
+       "       'Sim, eventos locais / Sí, eventos locales | Sim, eventos regionais (Python Nordeste, Python Cerrado, Python Sul, etc) / Sí, eventos regionales (PyCon Latam, PyCon Bolivia) | Sim, eventos internacionais / Sí, eventos internacionales',\n",
+       "       'Sim, eventos regionais (Python Nordeste, Python Cerrado, Python Sul, etc) / Sí, eventos regionales (PyCon Latam, PyCon Bolivia)',\n",
+       "       'Sim, eventos internacionais / Sí, eventos internacionales',\n",
+       "       'Sim, eventos locais / Sí, eventos locales | Sim, eventos internacionais / Sí, eventos internacionales',\n",
+       "       'Sim, eventos regionais (Python Nordeste, Python Cerrado, Python Sul, etc) / Sí, eventos regionales (PyCon Latam, PyCon Bolivia) | Sim, eventos internacionais / Sí, eventos internacionales',\n",
+       "       'Sim, eventos locais / Sí, eventos locales | Não, esse é meu primeiro evento da linguagem Python / No, es mi primer evento de la comunidad Python',\n",
+       "       'Sim, eventos locais / Sí, eventos locales | Sim, eventos regionais (Python Nordeste, Python Cerrado, Python Sul, etc) / Sí, eventos regionales (PyCon Latam, PyCon Bolivia) | Sim, eventos internacionais / Sí, eventos internacionales | Não, esse é meu primeiro evento da linguagem Python / No, es mi primer evento de la comunidad Python',\n",
+       "       'Sim, eventos regionais (Python Nordeste, Python Cerrado, Python Sul, etc) / Sí, eventos regionales (PyCon Latam, PyCon Bolivia) | Não, esse é meu primeiro evento da linguagem Python / No, es mi primer evento de la comunidad Python',\n",
+       "       'N/A'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x[[\"Necessidades específicas - Se sim, qual?\"]]"
+    "x['Você já participou de algum outro evento Python?'].unique()"
    ]
   },
   {
